<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="collector" type="com.uniandes.vynilsmobile.data.model.Collector"/>
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        android:background="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textSize="17sp"
                    android:gravity="center"
                    android:text="@{collector.name}"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintHeight_percent="0.35"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textSize="17sp"
                    android:gravity="center"
                    android:text="@{collector.telephone}"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@id/textView1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHeight_percent="0.35"/>
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textSize="17sp"
                    android:gravity="center"
                    android:text="@{collector.email}"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@id/textView2"
                    app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/collectorItemSeparator"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/purple_200" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</layout>
