...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/albumName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:padding="30dp"
                tools:text="Buscando América"
...
                android:layout_marginTop="5dp"
                android:layout_weight="5"
                android:orientation="vertical"
                android:layout_gravity="end"
                android:padding="5dp">
                <Button
                    android:id="@+id/commentButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#1F37BF"
                    android:layout_gravity="start"
                    android:text="@string/commentAlbumButton" />
            </LinearLayout>
...
